# sankey_generator

./: .gitignore  README.md  config.json.example  main.py  manual_main.py  pyproject.toml  theme.qss
sankey_generator/: finanzguru_csv_parser.py  sankey_plotter.py
sankey_generator/controllers/: config_controller.py  main_controller.py
sankey_generator/models/: config.py  csv_filter.py  data_frame_filter.py  issue_category.py  key_value_item.py  sankey_income_node.py  sankey_node.py  theme.py  theme_manager.py
sankey_generator/resources/: theme.qss
sankey_generator/services/: config_service.py  finanzguru_csv_parser_service.py  sankey_plotter_service.py  theme_service.py
sankey_generator/ui/: config_window.py  filter_dialog.py  main_window.py  ui_observable_base_window.py
sankey_generator/utils/: observer.py
ui/: animated_toggle.py  main_window.py
